Bug 73003 - Weston clients warp between outputs with multiple touch device setup
Summary: Weston clients warp between outputs with multiple touch device setup
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-24 00:15 UTC by Anu Reddy
Modified: 2014-01-09 15:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Flickering terminal on mutli display (1.44 MB, video/webm)
2013-12-24 00:28 UTC, Anu Reddy
Details

Description Anu Reddy 2013-12-24 00:15:32 UTC
Steps:

1.	Two calibrated touch displays (display1, display2) running on weston
2.	Launch Weston terminal on display1 : weston-terminal
3.	Touch terminal on display1 and move across the screen.
4.	While moving the terminal on display1, touch display2. Observe terminal flicker on display1 and display2. 
5.	Now stop touching display1. Observe terminal disappear from display1 and appear on display2.
6.	Move the terminal across the screen on display2. 
7.	While performing step 6, touch display1. Observe terminal flicker on display1 and display2.
8.	 Now stop touching display2. Observe terminal disappear from display2 and appear on display1.


Expected result:
Terminal should not flicker and terminal should not move between the displays.


Environment :
Kernel:3.9.5-301.fc19.x86_64
wayland (HEAD) 1.3.91-0-g01bde63
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g6f7da01
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) remotes/origin/master-0-gdf42a80
efl (HEAD) remotes/origin/efl-1.8-0-g90c2320
elementary (HEAD) remotes/origin/elementary-1.8-0-ge077db6
wayland-fits (HEAD) remotes/origin/HEAD-0-gcd75d94
Comment 1 Anu Reddy 2013-12-24 00:28:00 UTC
Created attachment 91166 [details]
Flickering terminal on mutli display

Attached video is captured from primary display.
Comment 2 Kristian Høgsberg 2014-01-09 06:22:11 UTC
commit 2fce4808dd90bb59689c56ddbe322496ca653182
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Jan 8 16:21:24 2014 -0800

    input: Remap touch point IDs from multiple touch screens to not overlap
    
    With multiple touch screens on one seat, the touch points IDs from the
    different evdev devices may overlap.  We have to remap the IDs we forward
    to core weston so that the touch points all have unique IDs within the seat.
    
    Closes: https://bugs.freedesktop.org/show_bug.cgi?id=73003


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.